--- a/dev/index.html
+++ b/dev/index.html
@@ -15,18 +15,19 @@
                 <li><a href="#" style="color: #ff5757">Urgence</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Mon Espace</a></li>
+                <li><a href="acounts.html">Mon Espace</a></li>
             </ul>
         </nav>
     </header>
-
-    <div class="container">
-        <div class="content">
-            <h1>Dr. Étienne Morel</h1>
-            <p style="font-size: 20px">Chirurgien Dentiste</p>
-            <p style="text-align: center">Le Dr. Étienne Morel possède plus de 10 ans d'expérience en dentisterie. Il est dévoué à offrir des soins personnalisés à ses patients et s'engage à maintenir sa pratique à la pointe des dernières recherches et innovations technologiques dans le domaine dentaire.</p>
-            <button>Prendre rendez-vous</button>
+    <main>
+        <div class="container">
+            <div class="content">
+                <h1>Dr. Étienne Morel</h1>
+                <p style="font-size: 20px">Chirurgien Dentiste</p>
+                <p style="text-align: center">Le Dr. Étienne Morel possède plus de 10 ans d'expérience en dentisterie. Il est dévoué à offrir des soins personnalisés à ses patients et s'engage à maintenir sa pratique à la pointe des dernières recherches et innovations technologiques dans le domaine dentaire.</p>
+                <button>Prendre rendez-vous</button>
+            </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
