Modification redirection d'un lien

--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#" style="color: #ff5757">Urgence</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="acounts.html">Mon Espace</a></li>
+                <li><a href="login.html">Mon Espace</a></li>
             </ul>
         </nav>
     </header>
